@@ -1,3 +1,9 @@
+2005-04-22  Alexey Shchepin  <alexey@sevcom.net>
+
+	* doc/guide.tex: Added mod_shared_roster documentation
+
+	* src/ejabberd.hrl: Updated version
+
 2005-04-21  Alexey Shchepin  <alexey@sevcom.net>
 
 	* src/jd2ejd.erl: Bugfix
@@ -14,6 +20,8 @@
 	a subdomain of another
 
 2005-04-18  Alexey Shchepin  <alexey@sevcom.net>
+
+	* (all): ejabberd-0.9 released
 
 	* src/web/ejabberd_web_admin.erl: Added link to shared roster page
 
